Return long instead of int in AbstractDay